--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,6 +12,10 @@
    
 }
 /* shared styles */
+.secondary-bg{
+    background-color: #FFF8F3;
+    
+}
 .dark2 , .banner-greetings{
      color: #474747;
 }
@@ -24,6 +28,18 @@
     font-size: 20px;
     border: none;
 
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+   color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+.text-center{
+    text-align: center;
 }
 /* header */
 .header {
@@ -79,4 +95,87 @@ nav ul li a {
     width:580px
 }
 
+/* main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+/* about styles */
+.about{
+    border-radius: 10px;
+    padding : 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.item-description--{
+   font-weight: 600;
+}
+/* skills */
+.skills-container{
+    display: flex;
+    gap: 24px;
+    
+}
+.skill{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+   border-radius: 5px;
+
+}
+/* resume */
+.resume-container{
+    display: flex;
+    gap: 24px;
+    
+}
+
+.experience-description--,.experience-sub-title{
+   color: #757575;;
+}
+.experience-sub-title{
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+.experience-title{
+ 
+    margin-bottom: 10px;
+}
+.resume hr{
+    margin: 30px 5px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+/* footer */
+footer{
+    padding : 130px 230px;
+    display: flex;
+    gap: 100px;
+    ;
+}
+.footer-column{
+    width:50%;
+}
+footer input[type="text"], footer input[type="email"] ,footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width : 100%;
+    padding :10px 20px;
+    margin-bottom: 24px;
+    border: none;
+    color: #757575;
+
+}
 
